<?xml version="1.0"?>
<package format="2">
  <name>asc_control</name>
  <version>0.0.0</version>
  <description>The asc_control package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="bob@todo.todo">bob</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>asc_description</build_depend>
  <build_export_depend>asc_description</build_export_depend>
  <exec_depend>asc_description</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
