<?xml version="1.0"?>
<package>
  <name>asc_navigation</name>
  <version>0.4.0</version>
  <description>Navigation stack for asc_project.</description>
  <author email="fredrik@ginsberg.se">Fredrik Ginsberg</author>
  <maintainer email="fredrik@ginsberg.se">Fredrik Ginsberg</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>amcl</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>teb_local_planner</run_depend>
  <run_depend>pointcloud_to_laserscan</run_depend>
  <run_depend>spatio_temporal_voxel_layer</run_depend>
  <export>
  </export>
</package>

