<?xml version="1.0"?>
<package>
  <name>asc_rtabmap_navigation</name>
  <version>0.0.0</version>
  <description>Launch files and code for autonomous navigation of the ASC using rtabmap</description>
  <author email="fredrik@ginsberg.se"> Fredrik Ginsberg</author>
  <maintainer email="fredrik@ginsberg.se">Fredrik Ginsberg</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>rtabmap_ros</run_depend>
  <export>

  </export>
</package>

