<?xml version="1.0"?>
<package format="2">
  <name>asc_startup</name>
  <version>0.0.0</version>
  <description>The asc_startup package publiches on topics which tells roboRIO to start</description>
  <maintainer email="abbe@todo.todo">abbe</maintainer>


  <license>None</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>roscpp</exec_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
